samples/_failures_safe/1761146384_ff8a8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae19979f.c: In function ‘main’:
./samples/SAFE/__tmp_ae19979f.c:132:31: error: expected ‘)’ at end of input
  132 |         printf("%02X ", output
      |               ~               ^
      |                               )
./samples/SAFE/__tmp_ae19979f.c:132:9: error: expected declaration or statement at end of input
  132 |         printf("%02X ", output
      |         ^~~~~~
./samples/SAFE/__tmp_ae19979f.c:132:9: error: expected declaration or statement at end of input
